--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -21,6 +21,23 @@
 	    	
 	    	list.appendChild( element )
 	    }
+	    
+	    const sendMessage = () =>
+	    {
+	    	const text = document.getElementById( 'text' ).value
+
+	    	const http = new XMLHttpRequest()
+	    	const url = `/send?text=${ encodeURIComponent(text) }`
+
+	    	http.open( "POST", url, true )
+
+	    	http.setRequestHeader( "Content-type", "application/x-www-form-urlencoded" )
+
+	    	http.onreadystatechange = () =>
+	    	  { console.log( `Request status: ${ http.status }` ) }
+
+	    	http.send()
+	    }
 	  </script>
 	</head>
 	<body>
@@ -28,5 +45,10 @@
 
 	  <ul id="list">
 	  </ul>
+
+	  <form>
+	    <input id="text" name="text" value="Type sample message here">
+	    <button type="button" onClick="sendMessage()">Send</button>
+	  </form>
 	</body>
 </html>
