send messages to kafka

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -4,7 +4,7 @@
 	<head>
 	  <meta charset="utf-8">
 	
-	  <title>Prueba</title>
+	  <title>Test</title>
 	  
 	  <script>
 	    const source = new EventSource( "/messages" )
@@ -41,7 +41,7 @@
 	  </script>
 	</head>
 	<body>
-	  Hola Mundo
+	  Hello World
 
 	  <ul id="list">
 	  </ul>
